[package]
name = "speckr"
version = "0.1.0"
authors = ["orangeblock <orangeblock@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.3"
rand = "0.7.3"

[dependencies]
num = "0.3.1"
